# allotment

./: .gitignore  404.html  CONTRIBUTING.md  README.md  contributing.md  docker.md  index.html  project_setup.md  prompt.md  sitemap.xml  sonar-project.properties  tech_stack.md
backend/: .coveragerc  .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  mypy.ini  pyproject.toml  pytest.ini
backend/app/: .env.template  main.py  settings.template.yml
backend/app/api/core/: auth.py  auth_utils.py  config.py  database.py  error_handler.py  exceptions.py  limiter.py  logging.py  security.py
backend/app/api/factories/: user_active_variety_factory.py  user_factory.py  variety_factory.py
backend/app/api/middleware/: error_codes.py  error_handler.py  exception_handler.py  exceptions.py  logging_middleware.py  security_headers_middleware.py
backend/app/api/models/: __init__.py  base.py  enums.py  (+3 more)
backend/app/keys/: public.pem  test_private.pem  test_public.pem
backend/app/models/: user_allotment.py
backend/app/tests/: test_health.py
backend/migrations/: env.py
backend/migrations/versions/: 2025_03_16-51f783d3456b_add_user_and_user_allotment_tables.py  2025_04_04-851e27ae4553_add_is_email_verified_column_to_user_.py  2025_05_28-47d724a4ec0f_add_family_realted_tables.py  2025_05_28-47d724a4ec0f_add_family_related_tables.py  2025_06_07-fd5d387c3559_add_disease_and_pest_tables.py  2025_08_09-3916ba4ebbc5_add_user_feed_day_day_and_feed_tables.py  2025_08_11-765158ab8593_add_feed_day_and_user_feed_day_tables_.py  2025_09_01-8c931f918307_create_and_seed_the_tables_required_to_.py  2025_09_06-25ef95099e0e_create_and_seed_tables_required_for_.py  2025_09_11-7ea357b128a9_initial_migration.py  2025_09_12-b9ae10f113e0_initial_migration.py  2025_09_13-1d2550f8d4a6_initial_migration.py  2025_10_01-2f9e2e424f74_initial_migration.py  2025_10_16-9505eadaea48_initial_migration.py
backend/tests/: conftest.py  test_e2e.py  test_helpers.py  testing_db.py
backend/tests/integration/: conftest.py  test_auth.py  test_auth_error_paths.py  test_database.py  test_day.py  test_email_service.py  test_error_paths.py  test_exception_handler.py  test_exceptions.py  test_family.py  test_feed.py  test_health.py  test_logging.py  test_main.py  test_registration.py  test_user.py  test_user_allotment.py  test_user_auth.py  test_user_preference.py
backend/tests/unit/: test_auth.py  test_base_schema.py  test_config.py  test_database.py  test_day.py  test_email_service.py  test_email_service_unit.py  test_error_handler.py  test_exception_handler.py  test_exceptions.py  test_family_repository.py  test_feed.py  test_grow_guide_repositories.py  test_logging.py  test_main.py  test_registration.py  test_user.py  test_user_allotment.py  test_user_auth.py  test_user_factory.py  test_user_model.py  test_user_repository.py  test_user_schema.py  test_user_unit_of_work.py  test_validators.py
(+447 files in other folders)
