[project]
name = "allotment-svc"
version = "0"
requires-python = "==3.13.*"
dependencies = [
    "fastapi",
    "fastapi-mail",
    "SQLAlchemy", 
    "pydantic", 
    "pydantic-settings", 
    "Authlib", 
    "psutil", 
    "asyncpg", 
    "bcrypt",
    "email-validator",
    "structlog",
    "slowapi",
    "opentelemetry-api",
    "opentelemetry-sdk"
]

[dependency-groups]
dev = [
    "fastapi[standard]", 
    "alembic", 
    "pytest", 
    "ruff", 
    "mypy",
    "typing-extensions",
    "types-psutil",
    "types-pyyaml", 
    "types-python-jose",
    "pytest-asyncio",
    "pytest-mock",
    "httpx",
    "aiosqlite",
    "cryptography"
]