[project]
name = "allotment-svc"
version = "0"
requires-python = "==3.13.*"
dependencies = [
    "fastapi",
    "fastapi-mail",
    "SQLAlchemy", 
    "pydantic", 
    "pydantic-settings", 
    "Authlib", 
    "psutil", 
    "asyncpg",
    "psycopg2-binary",
    "bcrypt",
    "email-validator",
    "structlog",
    "slowapi",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "alembic",
    "uvicorn"
]

[dependency-groups]
dev = [
    "fastapi[standard]", 
    "pytest",
    "pytest-xdist",
    "ruff", 
    "mypy",
    "typing-extensions",
    "types-psutil",
    "types-pyyaml", 
    "types-python-jose",
    "pytest-asyncio",
    "pytest-mock",
    "httpx",
    "aiosqlite"
]